--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
 	background-color: #001530;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .header>.logo{
@@ -11,8 +12,8 @@ body{
 	align-items:center;
 	justify-content: space-between;
 	padding: 10px;
-	margin-right: 10rem;
-	margin-left: 10rem;
+	margin-right: 20rem;
+	margin-left: 20rem;
 }
 
 .navbar {
@@ -30,15 +31,51 @@ body{
 	font-size: medium;
 }
 
-.header>.btn{
+.section1{
+	display:grid;
+	grid-template-columns: 2fr 1fr;
+	margin-left: 20rem;
+	margin-right: 10rem;
+	justify-content: space-between;
+	align-items: center;
+	padding-top:5rem;
+}
+
+.changing_text{
+	margin-right: 5rem;
+	padding:2rem;
+	display:flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 2rem;
+}
+
+.changing_text>h1>span {
+	color:#0ec9ac;
+}
+.maintext{
+	font-size: 3rem;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color:whitesmoke;
+}
+
+.subtext{
+	color:grey;
+	font-size: 1rem;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.btn{
 	background-color: #0ec9ac;
 	color:whitesmoke;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-weight:600;
 	font-size: large;
-	border-radius: 1rem;
+	border-radius: 0.5rem;
 	padding-left: 50px;
 	padding-right: 50px;
 	padding-top: 20px;
 	padding-bottom: 20px;
+	border: none;
 }
