--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #001530;
+	background-color: rgb(0, 21, 48);
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -11,9 +11,9 @@ body{
 	display: flex;
 	align-items:center;
 	justify-content: space-between;
-	padding: 10px;
-	margin-right: 20rem;
-	margin-left: 20rem;
+	padding: 7px;
+	margin-right: 10rem;
+	margin-left: 10rem;
 }
 
 .navbar {
@@ -34,11 +34,11 @@ body{
 .section1{
 	display:grid;
 	grid-template-columns: 2fr 1fr;
-	margin-left: 20rem;
+	margin-left: 10rem;
 	margin-right: 10rem;
 	justify-content: space-between;
 	align-items: center;
-	padding-top:5rem;
+	padding-top:2rem;
 }
 
 .changing_text{
@@ -78,4 +78,40 @@ body{
 	padding-top: 20px;
 	padding-bottom: 20px;
 	border: none;
+}
+
+.section2{
+	margin-left: 10rem;
+	margin-right: 10rem;
+	padding: 2rem;
+}
+
+.cards {
+	display:flex;
+	margin-top:3rem;
+	color:whitesmoke;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size:large;
+	gap: 3rem;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.card{
+	padding:1rem;
+	background-color: rgba(0, 28, 63, 0.7);
+	border-radius: 15px;
+	padding:2rem;
+}
+
+.icon {
+	height:3rem;
+	width:3rem;
+}
+
+.icon_heading{
+	display: flex;
+	gap: 1rem;
+	justify-content: flex-start;
+	align-items:center;
 }
