--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.header>.logo{
+.logo{
 	height:5rem;
 }
 
@@ -51,7 +51,7 @@ body{
 	gap: 2rem;
 }
 
-.changing_text>h1>span {
+span {
 	color:#0ec9ac;
 }
 .maintext{
@@ -114,4 +114,26 @@ body{
 	gap: 1rem;
 	justify-content: flex-start;
 	align-items:center;
+}
+
+.section3 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 100px;
+}
+
+#company_logos{
+	display:flex;
+	gap:100px;
+	padding: 20px;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.sub_heading{
+	font-size: 2rem;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	color:whitesmoke;
 }
