--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ span, .section_title {
 	color:grey;
 	font-size: 1rem;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .btn{
@@ -106,10 +108,9 @@ span, .section_title {
 }
 
 .card{
-	padding:1rem;
+	padding:3rem;
 	background-color: rgba(0, 28, 63, 0.7);
 	border-radius: 15px;
-	padding:2rem;
 }
 
 .icon {
@@ -200,6 +201,7 @@ h3 {
 	justify-content:center;
 	align-items: center;
 	gap: 3rem;
+	padding-top: 2rem;
 }
 
 .services_cards>.card>h3{
@@ -241,11 +243,22 @@ h3 {
 	overflow: auto
 }
 
-.services_cards>.card>img{
-	width:20rem;
-	height:auto;
-}
 .section9{
-    height: 300px;  /* Adjust as needed, or use a specific height value */
+    height: 600px;  /* Adjust as needed, or use a specific height value */
     overflow: hidden; /* This will prevent any overflowing content from causing unexpected spacing */
+	padding: 100px;
+	margin-left: 7rem;
+	margin-right: 7rem;
+	margin-bottom: 4rem;
+}
+
+.Newsletter{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#subscribe {
+	display: flex;
 }
