--- a/style.css
+++ b/style.css
@@ -257,8 +257,52 @@ h3 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin-bottom: 2rem;;
 }
 
 #subscribe {
 	display: flex;
+	background-color: whitesmoke;
+	width: 80vh;
+	border-radius: 1rem;
+	justify-content: space-around;
+	align-items: center;
+}
+
+#subscribe>input{
+	text-decoration: none;
+	border:none;
+	padding:2rem;
+	background-color: whitesmoke;
+}
+
+.footerbar{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	padding:2rem;
+}
+
+.footer_links {
+	display: flex;
+	justify-content: space-between;
+	gap:2rem;
+}
+
+.footer_links>a{
+	text-decoration: none;
+	color:whitesmoke;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-weight: 600;
+	font-size: medium;
+}
+
+.social_logo{
+	display: flex;
+	justify-content: space-between;
+	gap:2rem;
+	align-items: center;
 }
