odoeter feature for the numbers

--- a/style.css
+++ b/style.css
@@ -197,6 +197,9 @@ span, .section_title {
 	list-style: none;
 }
 
+.section7 {
+	padding-bottom: 7rem;
+}
 .section8{
 	background-color: rgb(229, 229, 228, 0.1);
 }
