--- a/style.css
+++ b/style.css
@@ -144,7 +144,6 @@ span, .section_title {
 .cards {
 	display:flex;
 	flex-direction: row;
-	margin-top:3rem;
 	color:whitesmoke;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size:large;
@@ -213,11 +212,6 @@ span, .section_title {
     display: flex;
     justify-content: center; /* Centers content */
     align-items: center;
-    min-height: auto;
-    height: auto;
-    overflow: hidden; /* Ensures no extra scroll */
-	border: 2px solid red;
-	max-height: fit-content;
 }
 
 
@@ -275,7 +269,17 @@ h3 {
 	align-items: center;
 	gap: 3rem;
 	padding-top: 2rem;
-	flex-wrap:wrap;
+	max-width:100%;
+}
+
+.news_cards {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 1fr;
+	justify-content:center;
+	align-items: center;
+	gap: 3rem;
+	padding-top: 2rem;
 	max-width:100%;
 }
 
@@ -434,7 +438,7 @@ h3 {
 		font-size: 1rem;
 	}
 
-    .services_cards {
+    .services_cards , .news_cards{
         grid-template-columns: 1fr; /* Stack cards vertically */
         gap: 20px; /* Increase gap for better separation */
     }
@@ -554,7 +558,7 @@ h3 {
 	}
 
 	/* card layouts */
-	.cards, .services_cards {
+	/* .cards, .services_cards , .news_cards{
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -562,8 +566,14 @@ h3 {
 		padding:1rem;
 		width: 100%;
 		justify-content: center;
-		flex-wrap:wrap;
-	}
+		flex-wrap: wrap;
+		overflow-x: hidden;
+	} */
+
+	.services_cards , .news_cards{
+        grid-template-columns: 1fr; /* Stack cards vertically */
+        gap: 20px; /* Increase gap for better separation */
+    }
 
 	.card, .number_card, .icon_heading, .our_services, .trial_days, .Newsletter {
 		width: 100%;
