--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ span, .section_title {
 	align-items:center;
 }
 
-.header, .section1, .security_services-section, .customer_trust-section, .section4, .section5, .section6, .section7, .section8, .section9, .section10 {
+.header, .section1, .security_services-section, .customer_trust-section, .section4, .choose_us-section, .section6, .section7, .section8, .section9, .section10 {
 	padding:3rem;
 	margin-left:auto;
 	margin-right:auto;
@@ -192,7 +192,7 @@ span, .section_title {
 	align-items: center;
 }
 
-.section4, .section5 {
+.section4, .choose_us-section {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1 fr;
@@ -433,11 +433,11 @@ h3 {
 		display: flex;
 	}
 
-    .section1, .section4, .section5{
+    .section1, .section4, .choose_us-section{
         grid-template-columns: 1fr; /* Stacks elements vertically */
     }
 
-	.header, .section1, .security_services-section, .customer_trust-section, .section4, .section5, .section6, .section7, .section8, .section9, .section10 {
+	.header, .section1, .security_services-section, .customer_trust-section, .section4, .choose_us-section, .section6, .section7, .section8, .section9, .section10 {
         max-width: 95%; /* More space on the sides for better readability */
         padding: 2rem;
     }
@@ -557,7 +557,7 @@ h3 {
 	}
 	/* general padding and margins for smaller screens */
 	
-	.security_services-section, .customer_trust-section, .section6, .section7, .section8, .section9, .section10 , .section1, .section4, .section5{
+	.security_services-section, .customer_trust-section, .section6, .section7, .section8, .section9, .section10 , .section1, .section4, .choose_us-section{
 		padding: 1.5rem; /* Consistent, smaller padding */
 		text-align: center;
 		display: flex;
